added contacts API
